corrected overflow-x style to remove unnecessary horizontal scroll bar

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -934,7 +934,7 @@ Docco style used in http://jashkenas.github.com/docco/ converted by Simon Madine
 
 .hljs {
   display: block;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .hljs-comment,
